# sionna-refraction-test

./: README.md  pyproject.toml  requirements.txt
data/: room19-simple2-ver2.blend  room19-simple2-ver2.xml
data/meshes/: Wall0.ply  Wall1.ply  Wall2.ply  Wall3.ply  ceiling.ply  floor.ply  table2.ply
notebooks/: refraction_demo.ipynb
