[project]
name = "refraction-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "absl-py==2.2.1",
    "alembic==1.14.1",
    "antlr4-python3-runtime==4.9.3",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==25.1.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "drjit==1.0.3",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "flatbuffers==25.2.10",
    "fonttools==4.56.0",
    "gast==0.6.0",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "ipydatawidgets==4.3.2",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.5",
    "jedi==0.19.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.13",
    "keras==2.15.0",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "mako==1.3.9",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mitsuba==3.6.2",
    "ml-dtypes==0.3.2",
    "namex==0.0.8",
    "narwhals==1.28.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "omegaconf==2.3.0",
    "opt-einsum==3.4.0",
    "optree==0.14.1",
    "optuna==4.2.1",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly==6.0.0",
    "prompt-toolkit==3.0.50",
    "protobuf==4.25.6",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pythreejs==2.4.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "scipy==1.15.2",
    "setuptools==78.1.0",
    "sionna==1.0.2",
    "sionna-rt==1.0.2",
    "six==1.17.0",
    "sqlalchemy==2.0.38",
    "stack-data==0.6.3",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.15.1",
    "tensorflow-estimator==2.15.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "tensorflow-macos==2.15.1",
    "termcolor==2.5.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "traittypes==0.2.1",
    "typing-extensions==4.13.0",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.13",
    "wrapt==1.14.1",
]
